create a consumer application (#23)
* add http handler, command, and repo to create an application

* clean up
